--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "10.12.3",
     "@types/react": "16.7.1",
     "@types/react-dom": "16.0.9",
+    "tslint-config-airbnb": "5.11.0",
     "typescript": "3.1.6"
   }
 }
