--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-redux": "6.0.9",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-redux": "5.1.0",
@@ -17,10 +16,15 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/enzyme": "3.1.15",
+    "@types/enzyme-adapter-react-16": "1.0.3",
     "@types/jest": "23.3.9",
     "@types/node": "10.12.3",
     "@types/react": "16.7.1",
     "@types/react-dom": "16.0.9",
+    "@types/react-redux": "6.0.9",
+    "enzyme": "3.7.0",
+    "enzyme-adapter-react-16": "1.7.0",
     "tslint-config-airbnb": "5.11.0",
     "typescript": "3.1.6"
   }
