--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   // Turns auto fix on save on or off, or defines which rules (e.g. `no-var-keyword`) to auto fix on save.
   "tslint.autoFixOnSave": true,
   "eslint.autoFixOnSave": true,
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "markdown.extension.preview.autoShowPreviewToSide": true
 }
