--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.6.1",
     "react-redux": "5.1.0",
     "react-scripts-ts": "3.1.0",
-    "redux": "4.0.1"
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
