--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "3.5.1",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
     "react-redux": "5.1.0",
     "react-scripts-ts": "3.1.0",
     "redux": "4.0.1",
