--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-redux": "6.0.9",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
+    "har-validator": "5.1.3",
     "tslint-config-airbnb": "5.11.0",
     "typescript": "3.1.6"
   }
