--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom --coverage",
+    "test": "react-scripts-ts test --env=jsdom",
+    "test:coverage": "npm test -- --coverage --coverageReporters=text-lcov | coveralls",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/react": "16.7.1",
     "@types/react-dom": "16.0.9",
     "@types/react-redux": "6.0.9",
+    "coveralls": "3.0.2",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
     "har-validator": "5.1.3",
