--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "test:coverage": "npm test -- --coverage --coverageReporters=text-lcov | coveralls",
+    "test:coverage": "npm test -- --coverage",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
