--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "3.5.1",
+    "@types/classnames": "2.2.6",
+    "classnames": "2.2.6",
     "react": "16.7.0",
     "react-dom": "16.7.0",
     "react-redux": "5.1.0",
