--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-redux": "5.1.0",
     "react-scripts-ts": "3.1.0",
     "redux": "4.0.1",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "reselect": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
