--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "reselect": "4.0.0"
   },
   "scripts": {
+    "analyze": "npm run build && source-map-explorer build/static/js/main.*",
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
@@ -40,6 +41,7 @@
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
     "har-validator": "5.1.3",
+    "source-map-explorer": "1.6.0",
     "tslint-config-airbnb": "5.11.0",
     "typescript": "3.1.6"
   }
